src/ListPlayer.css
/* ... */
.list-player div.controller-panel > .btn {
  opacity: 0.75;
}

.list-player div.controller-panel > .btn:hover {
  opacity: 1;
}



/* ---------------------------- */

/* INFOCARD ------------------- */
.list-player div.lt-info-card {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  height: 100%;
  min-height: fit-content;
  padding: 1rem/* 16px */;
  transition: padding 0.3s ease-in-out;
}

.list-player div.lt-info-panel {
  flex: 1 1 0%;
  display: flex;
  flex-direction: column;
  width: 100%;
  min-width: 13.9rem/* 222.4px */;
  max-height: 30rem/* 480px */;
  padding-bottom: 5rem/* 80px */;
  padding-left: 0.75rem/* 12px */;
  padding-right: 0.75rem/* 12px */;
  padding-top: 0.5rem/* 8px */;
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 500ms;
  animation: fadeIn 0.6s ease-in-out;
}

/* div.lt-info-title {

} */

.list-player h1.lt-info-title-h1 {
  font-size: 2rem;
}

.list-player div.lt-info-stats {
  display: flex;
  flex-wrap: nowrap;
  gap: 0.25rem;
}

.list-player div.lt-info-stats > span, h1.lt-info-title-h1 > span {
  white-space: nowrap;
}

.list-player .lt-info-stats .text.pure {
  font-size: large;
  font-weight: 600;
  opacity: var(--lp-text-op-2);
}

.list-player div.lh-listinfocard-cont {
  padding: 0.64rem;
  container-type: size;
}

.list-player .lt-info-title h1, .list-player .lt-info-panel .lt-info-stats span.text.pure, .list-player .lt-info-panel .lt-info-stats span.text.number, .list-player .lt-info-panel .lt-info-stats span.cdot {
  transition: all 0.2s linear;
}

@container (max-height: 144px) and (max-width: 480px) {
  .list-player .lt-info-panel {
    opacity: 0;
  }
}

@container (min-height: 94px) and (max-height: 130px) {
  .list-player .lt-info-title h1 {
    font-size: x-large;
  }
  .list-player .lt-info-panel .lt-info-stats span.text.pure, .list-player .lt-info-panel .lt-info-stats span.text.number, .list-player .lt-info-panel .lt-info-stats span.cdot {
    font-size: small;
  }
}

@container (max-height: 192px) and (min-height: 130px) {
  .list-player .lt-info-title h1 {
    font-size: x-large;
  }
  .list-player .lt-info-panel .lt-info-stats span.text.pure, .list-player .lt-info-panel .lt-info-stats span.text.number, .list-player .lt-info-panel .lt-info-stats span.cdot {
    font-size: small;
  }
}

@container (max-width: 550px) {
  .list-player .lt-info-title h1 {
    font-size: x-large;
  }
  .list-player .lt-info-panel .lt-info-stats span.text.pure, .list-player .lt-info-panel .lt-info-stats span.text.number, .list-player .lt-info-panel .lt-info-stats span.cdot {
    font-size: small;
  }
}

@container (max-width: 550px) and (max-height: 200px) {
  .list-player .lt-info-title h1 {
    font-size: x-large;
  }
  .list-player .lt-info-panel .lt-info-stats span.text.pure, .list-player .lt-info-panel .lt-info-stats span.text.number, .list-player .lt-info-panel .lt-info-stats span.cdot {
    font-size: small;
  }
  .list-player div.lt-info-card {
    padding: 0;
  }
}

@container (max-width: 354px) {
  .list-player .lt-info-title h1 {
    font-size: large;
  }
  .list-player .lt-info-panel .lt-info-stats span.text.pure, .list-player .lt-info-panel .lt-info-stats span.text.number, .list-player .lt-info-panel .lt-info-stats span.cdot {
    font-size: xx-small;
  }
  .list-player div.lt-info-card {
    padding: 0;
  }
}

@container (max-height: 134px) or (max-width: 100px) {
  .list-player div.lt-info-card {
    padding: 0;
  }
}

@container (max-height: 94px) {
  .list-player .lt-info-title h1 {
    line-height: 140%;
    font-size: large;
  }
  .list-player .lt-info-panel .lt-info-stats span.text.pure, .list-player .lt-info-panel .lt-info-stats span.text.number, .list-player .lt-info-panel .lt-info-stats span.cdot {
    font-size: xx-small;
  }
  .list-player div.lt-info-card {
    padding: 0;
  }
}


/* BADGES ----------------------*/
.list-player span.badge {
  font-size: xx-small;
}

.list-player span.new {
  color: rgba(161, 204, 165, 0.8);
  padding: 0px 3px 0px 3px;
  border-radius: 2px;
  border: 2px solid rgba(161, 204, 165, 0.8);
}

.list-player span.explicit {
  color: rgba(255, 255, 255, 0.7);
  padding: 0px 3px 0px 3px;
  border-radius: 2px;
  border: 2px solid rgba(255, 255, 255, 0.7);
}
/* ---------------------------- */


@container list (min-width: 700px){
  .list-player div.lg-meta-cont {
      display: flex;
  }
  .list-player div.meta-cont {
      display: none!important;
  }
}

@media (prefers-color-scheme: dark) {
  .list-player div.track:hover, .list-player div.track.selected {
    background-color: rgba(0, 0, 0, 0.10);
  }
}

.list-player div.lt-info-img-cont {
  --lp-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
  box-shadow: var(--lp-ring-offset-shadow, 0 0 #0000), var(--lp-ring-shadow, 0 0 #0000), var(--lp-shadow);
  height: fit-content;
  max-height: 100%;
  border-radius: 0.5rem;
  aspect-ratio: 1 / 1;
  overflow: hidden;
}

.list-player img.lt-info-img {
  height: 100%;
  width: 14rem;
  object-fit: cover;
}

.list-player div.lt-info-art-placeholder-cont {
  --lp-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
  --tw-border-opacity: 1;
  box-shadow: var(--lp-ring-offset-shadow, 0 0 #0000), var(--lp-ring-shadow, 0 0 #0000), var(--lp-shadow);
  height: fit-content;
  max-height: 100%;
  border-color: rgb(209 213 219 / var(--tw-border-opacity));
  border-radius: 0.5rem;
  border-width: 2px;
  aspect-ratio: 1 / 1;
  overflow: hidden;
  opacity: 0.8;
}

.list-player div.lt-info-placeholder {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 14rem;
  max-width: 100%;
  text-align: center;
  font-size: 1.875rem;
  line-height: 2.25rem;
  padding: 1rem;
  container-name: art;
  container-type: inline-size;
}

.list-player div.lt-info-placeholder > span {
  font-size: 3.5rem;
  transition: font-size 0.2s linear;
}
/* ... */

